--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 title: LRR Capital
 ---
 <h1>LRR Capital</h1>
-<p>blah blah</p>
+<p>blah blah. Heres a test image</p>
+<img src="images/img.png">
 <hr>
 <a href="/about">About</a>
 <br>
-<a href="/about">Research</a>
+<a href="/research">Research</a>
