Documentation and filler text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@ layout: default
 title: LRR Capital
 ---
 <h1>LRR Capital</h1>
-<p>blah blah. Heres a test image</p>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consectetur elit at nisi viverra mollis. Morbi iaculis vulputate felis nec dictum. Maecenas elit nibh, sollicitudin vitae arcu eget, ultrices pellentesque felis. Donec ornare ultrices purus nec molestie. Suspendisse potenti.
+</p>
+<p>
+  Here is a test image:
+</p>
 <img src="images/img.png">
 <hr>
 <a href="/about">About</a>
