--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: LRR Capital
 ---
 <h1>LRR Capital</h1>
 <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consectetur elit at nisi viverra mollis. Morbi iaculis vulputate felis nec dictum. Maecenas elit nibh, sollicitudin vitae arcu eget, ultrices pellentesque felis. Donec ornare ultrices purus nec molestie. Suspendisse potenti.
+  LRR Capital is a student-owned and operated hedge fund founded. Read more about us or explore our research below.
 </p>
 <p>
   Here is a test image:
