--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: LRR Capital
 <p>
   Here is a test image:
 </p>
-<img src="images/img.png">
+<img src="images/LRR-Logo-FINAL.png">
 <hr>
 <a href="/about">About</a>
 <br>
