--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: LRR Capital
 ---
-<img src="images/LRR-Logo-FINAL.png">
+<img src="images/LRR-Logo-FINAL.png" width="200">
 <p>
   LRR Capital is a student-owned and operated hedge fund. Read more about us or explore our research below.
 </p>
