--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: LRR Capital
 ---
 <img src="images/LRR-Logo-FINAL.png" width="200">
 <p>
-  LRR Capital is a student-owned and operated hedge fund. Read more about us or explore our research below.
+  LRR Capital is a student-owned and operated private investment fund. Read more about us or explore our research below.
 </p>
 <hr>
 <a href="/about">About</a>
